--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <body>
-            <h1>This is a header</h1>
-            <p>This is paragraph</p>
-            <p>This is second paragraph</p>
-        </body>
-    </head>
+    <head></head>
+    <body>
+        <h1>This is a header</h1>
+    </body>
 </html>
