--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
     <body>
         <h1>This is a header</h1>
         <p>This is para</p>
+        <p>this is second para</p>
+        <p>This is third paragraph</p>
     </body>
 </html>
