--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 col-md-3">
-                <h3>THis month's Promotion</h3>
+                <h3>This month's Promotion</h3>
             </div>
             <div class="col col-sm col-md">
                 <h2>Weekand Grand BUffet</h2>
@@ -71,7 +71,7 @@
         </div>
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 order-sm-last col-md-3">
-                <h3>meet our culinary specialists</h3>
+                <h3>Meet our culinary specialists</h3>
             </div>
             <div class="col col-sm order-sm-frist col-md">
                 <h2>Alberto Somaya</h2>
@@ -95,7 +95,7 @@
                     </ul>
                 </div>
                 <div class="col-7 col-sm-5">
-                    <h5>Our adress</h5>
+                    <h5>Our address</h5>
                     <address>
                         121,clear water bay road<br>
                         clear water bay, kowloon<br>
