editing some error

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row row-content">
-        <div class="offset-md-2 col-md-8 offset-md-2" id="Reserve-table" >
+     
+     <div class="row row-content">
+        <div class="offset-2 col-10" id="Reserve-table" >
             <div class="card">
                 <h3 class=" card-header bg-warning text-white"> Reserve a table</h3>
                 <div class="card-body">
@@ -167,6 +167,7 @@
             </div>
         </div>
     </div>
+    </div>
     <footer class="footer">
         <div class="container">
             <div class="row">
@@ -186,7 +187,7 @@
                         Clear Water Bay, Kowloon<br>
                         HONG KONG<br>
                         <i class="fa fa-phone fa-lg"></i>:765737573<br>
-                        <i class="fa fa-envelope fa-lg"></i>: <a href="abc@gmail.com"></a>
+                        <i class="fa fa-envelope fa-lg"></i>:<a href="mailto:confusion@food.net">confusion@food.net</a>
                     </address>
                 </div>
                 <div class="col-12 col-sm-4 align-self-center">
@@ -209,7 +210,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-auto">
-                <p>copyright 2015 ristorance con fusion</p>
+                <p>© Copyright 2015 Ristornate confusion</p>
             </div>
         </div>
     </footer>
